@startuml
skinparam linetype ortho
skinparam shadowing false
skinparam class {
    BackgroundColor White
    BorderColor #263238
    ArrowColor #263238
}

package "Construction Service" #FFE0B2 {
    class InstallationFormController {
        + approveInstallationForm(request: ApproveRequest): ResponseEntity<WrapperApiResponse>
    }

    class InstallationFormHandlingUseCase {
        - ifSrv: InstallationFormService
        - costEstimateUseCase: CostEstimateUseCase
        + approveInstallationForm(request: ApproveRequest): void
    }

    interface InstallationFormService {
        + approveAndAssignInstallationForm(request: ApproveRequest): void
        + getByFormCodeAndFormNumber(code: String, num: String): InstallationFormListResponse
    }

    class CostEstimateUseCase {
        + createEstimate(request: CreateRequest): CostEstimateResponse
    }
}

' Relationships
InstallationFormController o-- InstallationFormHandlingUseCase
InstallationFormHandlingUseCase o-- InstallationFormService
InstallationFormHandlingUseCase o-- CostEstimateUseCase

@enduml
